feat: update kratos to version 0.13
This also includes fixes for verification, recovery etc. Also allows bot
accounts.

Ory Kratos version 0.13 also includes a feature called transient payload
that is used to send data from registration form to web hooks. This
finally allows us to make people become members directly when they sign
up.

Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/templates/admin/members.html
+++ b/templates/admin/members.html
@@ -18,6 +18,7 @@
 <script type="text/javascript">
     var _GRID_DATA_ = [
         {% for member in members %}
+        {% if member.schema_id != "bot" %}
         {
             {% if member.metadata_public is not None %}
             number: "{{ member.metadata_public.get('member_number', '-1') }}",
@@ -33,6 +34,7 @@
             street: "{{ member.traits['postal_address']['street'] }}",
             country: "{{ member.traits['country'] }}"
         },
+        {% end %%}
         {% end %}
     ];
 </script>
