--- a/templates/integrity.html
+++ b/templates/integrity.html
@@ -11,10 +11,10 @@
 <body>
     <section class="hero is-dark is-fullheight">
         <div class="hero-body">
-            <div class="container is-max-desktop">
+            <div class="container is-max-desktop has-text-centered">
                 <h3 class="title has-text-white">MemberPort</h3>
                 <p class="subtitle has-text-grey">Member management</p>
-                <div class="box">
+                <div class="box has-text-left">
                     <div class="content">
                         <h3>Varför kräver vi namn, mejl, addres, kön och födelsedatum?</h3>
                         <p>Mejl och andra kontaktuppgifter är för att vi ska kunna kontakta dig som medlem.</p>
