--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -88,7 +88,7 @@
                             </div>
                         </div>
                         {% else %}
-                        <input name="organizations" id="organizations" type="hidden" value="" />
+                        <input name="transient_payload" id="organizations" type="hidden" value="" />
                         <div class="field">
                             <label class="label">Föreningar jag vill bli medlem i:</label>
                             {% for org in organizations %}
