--- a/templates/profile.html
+++ b/templates/profile.html
@@ -99,7 +99,7 @@
                     <label class="label">
                         {{ placeholders[node.attributes.name] }}
                         {% if node.attributes.name == 'traits.email' %}
-                        {% if current_user.user.verified %}
+                        {% if current_user.verified %}
                         <span class="icon has-text-success">
                             <i title="Verifierad" class="fas fa-check-square"></i>
                         </span>
@@ -245,7 +245,7 @@
                 </div>
             </div>
             <div class="control">
-                <button id="joinButton" onclick="joinOrganization('{{ current_user.user.id }}');" class="button is-success is-pulled-left">Gå med i vald förening</button>
+                <button id="joinButton" onclick="joinOrganization('{{ current_user.user_id }}');" class="button is-success is-pulled-left">Gå med i vald förening</button>
             </div>
         </div>
 
