--- a/templates/setup.html
+++ b/templates/setup.html
@@ -35,6 +35,21 @@
                                     <input name="feed_url" class="input is-large" type="text" placeholder="Nyhetsfeed (Bara RSS länkar)" />
                                 </div>
                             </div>
+                            <div class="field">
+                                <div class="control">
+                                    <input name="name" class="input is-large" type="text" placeholder="Namn för administratörs kontot" />
+                                </div>
+                            </div>
+                            <div class="field">
+                                <div class="control">
+                                    <input name="email" class="input is-large" type="email" placeholder="Mejladress för administratörs kontot" />
+                                </div>
+                            </div>
+                            <div class="field">
+                                <div class="control">
+                                    <input name="password" class="input is-large" type="password" placeholder="Lösenord för administratörs kontot" />
+                                </div>
+                            </div>
                             <button id="install" onclick="saveSettings();" type="button" class="button is-block is-info is-large is-fullwidth">
                                 Installera
                             </button>
@@ -88,12 +103,15 @@
                         document.getElementsByName("org.name")[0].disabled = true;
                         document.getElementsByName("org.description")[0].disabled = true;
                         document.getElementsByName("feed_url")[0].disabled = true;
+                        document.getElementsByName("name")[0].disabled = true;
+                        document.getElementsByName("email")[0].disabled = true;
+                        document.getElementsByName("password")[0].disabled = true;
                     } else {
                         response.json().then(response => {
                             console.log(response);
                             document.getElementById("successNotification").classList.add('is-hidden');
                             var errorElement = document.getElementById("errorText");
-                            
+
                             errorElement.innerHTML = response.reason;
                             document.getElementById("errorNotification").classList.remove('is-hidden');
                         });
