fix: small logo fix
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/templates/verify.html
+++ b/templates/verify.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MemberPort | Logga in</title>
+    <title>MemberPort | Verifiera</title>
     <link rel="stylesheet" href="{{ static_url('css/app.bundle.css') }}">
 </head>
 
